group framework refactoring: - added dynamic dispatch (a form of load balancing) - added reduction and unicast (components) - added regression tests - added examples for dynamic dispatch + minor corrections to the components framework
note: not all files are committed because of some svn problems

git-svn-id: svn+ssh://scm.gforge.inria.fr/svn/proactive/branches/GroupsRefactoring@7543 28e8926c-6b08-0410-baaa-805c5e19b8d6